syntax= "proto3";

package primenumdecom;
option go_package="./primenumberdecomposition/primenumdecompb";

message PrimeDecom{
    int32 number = 1;
}

// message PrimeDecomRequest{
//     PrimeDecom primedecom = 1; 
// }

// message PrimeDecomResponse{
//     int32 result = 1;
// }

message PrimeDecomManyTimesRequest{
    PrimeDecom primedecom = 1;
}

message PrimeDecomManyTimesResponse{
    int32 result = 1;
}

service PrimeDecomService{
    //rpc PrimeDecom(PrimeDecomRequest) returns (PrimeDecomResponse) {};

    rpc PrimeDecomManyTimes(PrimeDecomManyTimesRequest) returns (stream PrimeDecomManyTimesResponse) {};

}